fixes bug with horizontal scroll not scrolling the entire width

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -15,6 +15,7 @@ body {
   justify-content: center;
   background-color: var(--theme-primary-color);
   overflow-y: auto;
+  overflow-x: auto;
 }
 
 .app {
@@ -72,6 +73,8 @@ body {
 
   .activity {
     width: 1100px;  /* here as fallback in case fixed_width_layout doesn't map to one of the classes below */
+    margin-left: auto;
+    margin-right: auto;
 
     &.fixed-width-1100px {
       width: 1100px;
